--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser-arcade-physics.min.js"></script>
     <script src="src/index.js"></script>
+    <script src="src/player.js"></script>
   </body>
 </html>
