--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="app">Unser Spiel:</div>
 
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser-arcade-physics.min.js"></script>
+    
+    <script src="src/player.class.js"></script>
+    <script src="src/bullet.class.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
